@@ -429,8 +429,8 @@ def set_default_indexes(model):
 
 _pypi_ixconfig_default = {
     "type": "mirror", "volatile": False,
+    "title": "PyPI",
     "mirror_url": "https://pypi.python.org/simple/",
-    "mirror_name": "PyPI",
     "mirror_web_url_fmt": "https://pypi.python.org/pypi/{name}"}
 
 
