@@ -170,32 +170,57 @@ form#search .help {
     right: 1em;
 }
 
-.user_index_list dt {
+h1.index_title span:before,
+div.user_index_list dt span:before,
+div.user_index_list ul a span:before {
+    content: "(";
+}
+
+h1.index_title span:after,
+div.user_index_list dt span:after,
+div.user_index_list ul a span:after {
+    content: ")";
+}
+
+div.user_index_list {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+div.user_index_list dl {
+    margin: 0.25em 1em;
+    width: 20em;
+}
+
+div.user_index_list dt {
     font-size: 18px;
     font-weight: bold;
 }
 
-.user_index_list dt {
+div.user_index_list dt {
     margin: 0;
     padding: 0;
 }
 
-.user_index_list dd {
-    margin: 0 0 1em 1em;
+div.user_index_list dd {
+    margin: 0 0 1em 0;
     padding: 0;
 }
 
-.user_index_list ul {
-    margin: 0;
+div.user_index_list dd.user_description {
+    margin: 0.5em 0 0.5em 1em;
     padding: 0;
-    list-style: none;
 }
 
-.user_index_list li {
+div.user_index_list ul {
+    margin: 0 0 0 1.5em;
+    padding: 0;
+}
+
+div.user_index_list li {
     margin: 0.25em 0;
     padding: 0;
-    display: inline-block;
-    min-width: 10em;
 }
 
 table.files,
